Add Pomelo package to csproj file. Modify mysql connection string. Register mysql db context in Startup.cs.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BooksDbConnectionString": "Server=127.0.0.1;Database=BooksDb;"
+    "BooksDbConnectionString": "Server=localhost;port=9298;Database=BooksDb;"
   }
 }
